# slp-search

./: .gitignore  Cargo.toml  README.md
app/: args.rs  main.rs  regex.rs
slp-filter/: Cargo.toml
slp-filter/src/: lib.rs
src/: args.rs  bin.rs  finder.rs  lib.rs  main.rs  regex.rs  search_string.rs
