[package]
name = "slp-search"
authors = ["Nick Condron <ncondron42@gmail.com>"]
description = "Filter slp replays or search for events"
repository = "https://github.com/ncondron42/slp-search"
version = "0.2.0"
license = "MIT"
edition = "2021"

[dependencies]
#peppi = "1.0.0-alpha.6"
peppi = { git = "https://github.com/hohav/peppi", branch="master" }
clap = { version = "3.1.17", features = ["derive"] }
