[package]
name = "slp-search"
authors = ["Nick Condron <ncondron42@gmail.com>"]
description = "Filter slp replays or search for events"
repository = "https://github.com/ncondron42/slp-search"
version = "0.2.0"
license = "MIT"
edition = "2021"

[lib]
name = "slp_search"
path = "src/lib.rs"

[[bin]]
name = "slp_search"
path = "src/bin.rs"

[dependencies]
#peppi = "1.0.0-alpha.6"
lazy_static = { version = "1.4.0" }
regex = { version = "1", default-features = false, features = ["perf", "std"] }
peppi = { git = "https://github.com/hohav/peppi", branch="main" }
clap = { version = "3.1.17", features = ["derive"] }
