[package]
name = "slp-search"
authors = ["Nick Condron <ncondron42@gmail.com>"]
description = "Filter slp replays or search for events"
repository = "https://github.com/ncondron42/slp-search"
version = "0.2.0"
license = "MIT"
edition = "2021"

[[bin]]
name = "slp-search"
path = "app/main.rs"

[dependencies]
slp-filter = { version = "0.1.0", path = "slp-filter" }
lazy_static = { version = "1.4.0" }
regex = { version = "1", default-features = false, features = ["perf", "std"] }
#peppi = "1.0.0-alpha.6"
peppi = { git = "https://github.com/hohav/peppi", branch="main" }
clap = { version = "3.1.17", features = ["derive"] }
