[package]
name = "slp-filter"
authors = ["Nick Condron <ncondron42@gmail.com>"]
description = "Build filters for slp replays"
repository = "https://github.com/ncondron42/slp-search"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
peppi = { git = "https://github.com/hohav/peppi", branch="main" }
